[metadata]
name = podbox
version = attr: podbox.__version__
keywords = podman, podman-compose, docker, docker-compose
description = Toolset for podman.
author = Mingzhe Zou
author_email = zoumingzhe@outlook.com
url = https://github.com/podboy/podbox
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv2
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Source Code = https://github.com/podboy/podbox
    Bug Tracker = https://github.com/podboy/podbox/issues
    Documentation = https://github.com/podboy/podbox

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires =
    xarg-python >= 0.10
    podman-compose
packages = find:

[options.entry_points]
console_scripts =
    podbox = podbox.commands:main
    podbox-compose = podbox.commands.compose:main

[options.packages.find]
include = podbox*
exclude =
    tests
